--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -7,12 +7,12 @@
 <label>To: </label>
 <div class="form-group">
 	<label>Day:</label>
-	<selct class="form-select" @bind="">
+	<select class="form-select" @bind="filterDay">
 		@foreach (string day in days)
 		{
 			<option>@day</option>
 		}
-	</selct>
+	</select>
 
 </div>
 <button>Find Flights</button>
@@ -34,5 +34,9 @@
 
 
 @code {
+	string[] days = { "Any", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday" };
+	string from = "YYC";
+	string to="YEG";
+	string filterDay = "Any";
 	
 }
