--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -39,55 +39,59 @@
 <button type="submit" class="btn btn-primary" @onclick="Filter">Find Flights</button>
 
 <h4>Flights</h4>
-<select class="form-select" >
-	@if (filter == 0)
-	{
+
+@if (filter == 0)
+{
+	<select class="form-select">
 		<option>Loading...</option>
-	}
-	else
-	{
+	</select>
+}
+else
+{
+	<select class="form-select" @bind="selected">
 		@foreach (Flight flight in flights)
 		{
 			<option>@flight</option>
 		}
-	}
-</select>
+	</select>
+}
+
 
 <h4>Reserve</h4>
 
 <div class="form-group">
 	<label>Flight code: </label>
-	<input type="text" class="form-control" />
+	<input type="text" class="form-control" placeholder="Flight" readonly/>
 </div>
 
 <div class="form-group">
 	<label>Airline: </label>
-	<input type="text" class="form-control" />
+	<input type="text" class="form-control" placeholder="Airline" readonly/>
 </div>
 
 <div class="form-group">
 	<label>Day: </label>
-	<input type="text" class="form-control" />
+	<input type="text" class="form-control" placeholder="Day" readonly/>
 </div>
 
 <div class="form-group">
 	<label>Time: </label>
-	<input type="text" class="form-control" />
+	<input type="text" class="form-control" placeholder="Time" readonly />
 </div>
 
 <div class="form-group">
 	<label>Cost: </label>
-	<input type="text" class="form-control" />
+	<input type="text" class="form-control" placeholder="Cost" readonly/>
 </div>
 
 <div class="form-group">
 	<label>Name: </label>
-	<input type="text" class="form-control" />
+	<input type="text" class="form-control" placeholder="Name" />
 </div>
 
 <div class="form-group">
 	<label>Citizenship</label>
-	<input type="text" class="form-control" />
+	<input type="text" class="form-control" placeholder="Citizenship" />
 </div>
 
 <button type="submit" class="btn btn-primary" >Reserve</button>
@@ -118,5 +122,7 @@
 		filter++;
 	}
 
-	
+	//Adding content to reserve
+	Flight selected;
+
 }
