--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -3,7 +3,8 @@
 @*Flight Finder dropdown*@
 <h4>Flight Finder</h4>
 <div class="d-flex flex-nowrap">
-	<div class="w-50">
+	
+	<div class="w-25" style="margin-right: 10px;">
 		<label>From: </label>
 		<select class="form-select" @bind="from">
 			<option value="Any">Any</option>
@@ -14,7 +15,7 @@
 		</select>
 	</div>
 
-	<div class="w-50">
+	<div class="w-25" style="margin-right: 10px;">
 		<label>To: </label>
 		<select class="form-select" @bind="to">
 			<option value="Any">Any</option>
@@ -26,7 +27,7 @@
 	</div>
 
 
-	<div class="w-50">
+	<div class="w-25" style="margin-right: 10px;">
 		<label>Day:</label>
 		<select class="form-select" @bind="filterDay">
 			@foreach (string day in days)
@@ -36,8 +37,12 @@
 		</select>
 
 	</div>
+	<div class="w-25">
+		<label></label>
+		<button type="submit" class="btn btn-primary w-100" @onclick="Filter">Find Flights</button>
+	</div>
 
-		<button type="submit" class="btn btn-primary w-50" @onclick="Filter">Find Flights</button>
+		
 	
 </div>
 
