--- a/GroupAssignment2/wwwroot/css/app.css
+++ b/GroupAssignment2/wwwroot/css/app.css
@@ -86,3 +86,82 @@ h1:focus {
         padding-left: env(safe-area-inset-left);
     }
 }
+
+.search-container {
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 15px;
+    align-content: flex-start;
+}
+
+.search-item {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    position: relative;
+}
+
+input, select {
+    height: 25px;
+    margin-right: 30px;
+}
+
+.find-button {
+    width: 25%;
+    background-color: cornflowerblue;
+    height: 25px;
+    align-self: flex-end;
+    color: white;
+    border: none;
+    position: relative;
+}
+
+h3 {
+    position: relative;
+    right: -40%;
+}
+
+.flights-found-field {
+    margin-bottom: 15px;
+}
+
+.formatted-field {
+    border: 1px solid grey;
+    width: 100%;
+    height: 25px;
+    display: inline-block;
+    padding-left: 5px;
+    margin-bottom: 10px;
+}
+
+.reservation-container span, .flights-found-field span {
+    color: grey;
+}
+
+.flights-found-field {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-bottom: 15px;
+}
+
+.reserve-button-container {
+    position: relative;
+    right: -40%;
+    display: flex;
+    flex-direction: column;
+}
+
+.reserve-button {
+    height: 25px;
+    background-color: dodgerblue;
+    color: white;
+    width: 20%;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.error {
+    color: orangered;
+}
