--- a/GroupAssignment2/Components/Pages/Reservation.razor
+++ b/GroupAssignment2/Components/Pages/Reservation.razor
@@ -13,7 +13,7 @@
         <label>Airline:</label>
         <select @bind="airline">
             <option value="" disabled selected>Select...</option>
-            @foreach (string airline in FlightsManager.GetAirlines())
+            @foreach (string airline in FlightManager.GetAirlines())
             {
                 <option value=@airline>@airline</option>
             }
@@ -84,8 +84,6 @@
     <span class="error">@error</span>
 </div>
 <br />
-<button @onclick="ClearReservations">Clear Reservations</button>
-<button @onclick="ShowReservations">Show Reservations</button>
 
 
 
@@ -103,8 +101,16 @@
     private string status = "";
     public string error = "";
 
-    List<Flight> flights = FlightsManager.GetFlights();
-    List<Reservation> reservations = ReservationManager.GetReservations();
+    List<Flight> flights = FlightManager.AddFlights();
+    //List<Reservation> reservations = ReservationManager.GetReservations();
     HashSet<Reservation> reservationsFound = new HashSet<Reservation>();
     Reservation selectedReservation;
+
+    public void  SearchReservation()
+    {
+    }
+
+    public void UpdateSelectedReservation() { }
+
+    public void UpdateReservation() {}
 }
