--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -45,26 +45,26 @@
 
 <h4 class="text-center mt-5 mb-2">Flights</h4>
 <div>
-@if (filter == 0)
-{
-	<select class="form-select">
-		<option>Loading...</option>
-	</select>
-}
-else
-{
-	<select class="form-select" @bind="selected">
-		<option disabled selected></option>
-		@foreach (Flight flight in flights)
-		{
-			<option>@flight</option>
-		}
-	</select>
-	if(!String.IsNullOrEmpty(selected))
+	@if (filter == 0)
 	{
-		Select();
+		<select class="form-select">
+			<option>Loading...</option>
+		</select>
 	}
-}
+	else
+	{
+		<select class="form-select" @bind="selected">
+			<option disabled selected></option>
+			@foreach (Flight flight in flights)
+			{
+				<option>@flight</option>
+			}
+		</select>
+		if(!String.IsNullOrEmpty(selected))
+		{
+			Select();
+		}
+	}
 </div>
 
 <h4 class="text-center mt-5 mb-0">Reserve</h4>
@@ -105,8 +105,8 @@ else
 	</div>
 </div>
 <div class="d-flex flex-column justify-content-between align-items-center">
-	<button type="submit" class="btn btn-primary my-3" style="width: 200px;">Reserve</button>
-	<label class="mb-2 fs-6">Reservation Code: </label>
+	<button type="submit" class="btn btn-primary my-3" @onclick="Reserve"  style="width: 200px;">Reserve</button>
+	<label class="mb-2 fs-6" >Reservation Code: @reservationCode </label>
 </div>
 
 
@@ -132,7 +132,7 @@ else
 		Clear();
 		flights=FlightManager.FindFlights(from, to, filterDay);
 		filter++;
-		
+
 	}
 
 	//Adding content to reserve
@@ -172,4 +172,10 @@ else
 		citizenship = null;
 	}
 
+	string reservationCode = "";
+
+	private void Reserve(){
+		reservationCode = ReservationManager.GenerateReservationCode();
+		ReservationManager.MakeReservation(reservationCode, name, citizenship, selectedFlight);
+	}
 }
