--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -107,6 +107,7 @@
 <div class="d-flex flex-column justify-content-between align-items-center">
 	<button type="submit" class="btn btn-primary my-3" @onclick="Reserve"  style="width: 200px;">Reserve</button>
 	<label class="mb-2 fs-6" >Reservation Code: @reservationCode </label>
+	<span @bind="message"></span>
 </div>
 
 
@@ -173,9 +174,11 @@
 	}
 
 	string reservationCode = "";
+	string message = "";
 
 	private void Reserve(){
 		reservationCode = ReservationManager.GenerateReservationCode();
 		ReservationManager.MakeReservation(reservationCode, name, citizenship, selectedFlight);
+		message = "Flight reserved";
 	}
 }
