Made the textbox with derived data in the Flights.Razor read only

--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -71,27 +71,27 @@
 <div>
 	<div class="form-group">
 		<label>Flight code: </label>
-		<input type="text" class="form-control" placeholder="Flight" @bind="fCode" />
+		<input type="text" class="form-control" placeholder="Flight" @bind="fCode" readonly/>
 	</div>
 
 	<div class="form-group">
 		<label>Airline: </label>
-		<input type="text" class="form-control" placeholder="Airline" @bind="fName" />
+		<input type="text" class="form-control" placeholder="Airline" @bind="fName" readonly />
 	</div>
 
 	<div class="form-group">
 		<label>Day: </label>
-		<input type="text" class="form-control" placeholder="Day" @bind="fDay" />
+		<input type="text" class="form-control" placeholder="Day" @bind="fDay" readonly/>
 	</div>
 
 	<div class="form-group">
 		<label>Time: </label>
-		<input type="text" class="form-control" placeholder="Time" @bind="fTime" />
+		<input type="text" class="form-control" placeholder="Time" @bind="fTime" readonly/>
 	</div>
 
 	<div class="form-group">
 		<label>Cost: </label>
-		<input type="text" class="form-control" placeholder="Cost" @bind="cost" />
+		<input type="text" class="form-control" placeholder="Cost" @bind="cost" readonly/>
 	</div>
 
 	<div class="form-group">
