--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -54,7 +54,7 @@
 	else
 	{
 		<select class="form-select" @bind="selected">
-			<option disabled selected></option>
+			<option disabled selected>Please select...</option>
 			@foreach (Flight flight in flights)
 			{
 				<option>@flight</option>
@@ -71,27 +71,27 @@
 <div>
 	<div class="form-group">
 		<label>Flight code: </label>
-		<input type="text" class="form-control" placeholder="Flight" @bind="fCode" />
+		<input type="text" class="form-control" placeholder="Flight Code" @bind="fCode" style="background-color:white;" readonly />
 	</div>
 
 	<div class="form-group">
 		<label>Airline: </label>
-		<input type="text" class="form-control" placeholder="Airline" @bind="fName" />
+		<input type="text" class="form-control" placeholder="Airline" @bind="fName" style="background-color:white;" readonly />
 	</div>
 
 	<div class="form-group">
 		<label>Day: </label>
-		<input type="text" class="form-control" placeholder="Day" @bind="fDay" />
+		<input type="text" class="form-control" placeholder="Day" @bind="fDay" style="background-color:white;" readonly />
 	</div>
 
 	<div class="form-group">
 		<label>Time: </label>
-		<input type="text" class="form-control" placeholder="Time" @bind="fTime" />
+		<input type="text" class="form-control" placeholder="Time" @bind="fTime" style="background-color:white;" readonly />
 	</div>
 
 	<div class="form-group">
 		<label>Cost: </label>
-		<input type="text" class="form-control" placeholder="Cost" @bind="cost" />
+		<input type="text" class="form-control" placeholder="Cost" @bind="cost" style="background-color:white;" readonly />
 	</div>
 
 	<div class="form-group">
@@ -132,10 +132,20 @@
 	//Calling the findFlight() method in flightmanager
 	private void Filter()
 	{
-		Clear();
-		flights=FlightManager.FindFlights(from, to, filterDay);
-		filter++;
-
+		try
+		{
+			Clear();
+			flights=FlightManager.FindFlights(from, to, filterDay);
+			filter++;
+			if (flights.Count == 0 )
+			{
+				throw new Exception("No flight found");
+			}
+		}
+		catch(Exception e)
+		{
+			message = e.Message;
+		}
 	}
 
 	//Adding content to reserve
