--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -54,7 +54,7 @@
 	else
 	{
 		<select class="form-select" @bind="selected">
-			<option disabled selected>Please select...</option>
+			<option disabled selected></option>
 			@foreach (Flight flight in flights)
 			{
 				<option>@flight</option>
@@ -107,7 +107,7 @@
 <div class="d-flex flex-column justify-content-between align-items-center">
 	<button type="submit" class="btn btn-primary my-3" @onclick="Reserve"  style="width: 200px;">Reserve</button>
 	<label class="mb-2 fs-6" >Reservation Code: @reservationCode </label>
-	<span @bind="message"></span>
+	<span style="color: orangered" >@message</span>
 </div>
 
 
@@ -137,10 +137,7 @@
 			Clear();
 			flights=FlightManager.FindFlights(from, to, filterDay);
 			filter++;
-			if (flights.Count == 0 )
-			{
-				throw new Exception("No flight found");
-			}
+
 		}
 		catch(Exception e)
 		{
@@ -189,10 +186,18 @@
 	string message = "";
 
 	private void Reserve(){
-		reservationCode = ReservationManager.GenerateReservationCode();
-		ReservationManager.MakeReservation(reservationCode, name, citizenship, selectedFlight);
-		FlightManager.ReduceSeat(selectedFlight.FlightCode, allFlights);
-		FlightManager.WriteFlight(allFlights);
-		message = "Flight reserved";
+		try
+		{
+			ReservationManager.CheckInformation(name, citizenship);
+			reservationCode = ReservationManager.GenerateReservationCode();
+			ReservationManager.MakeReservation(reservationCode, name, citizenship, selectedFlight);
+			FlightManager.ReduceSeat(selectedFlight.FlightCode, allFlights);
+			FlightManager.WriteFlight(allFlights);
+			message = "Flight reserved";			
+		}
+		catch(Exception e)
+		{
+			message = e.Message;
+		}
 	}
 }
