Fixed up logic fo editting seat numer in reservations.razor also added clear to create reservation

--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -193,6 +193,7 @@
 			ReservationManager.MakeReservation(reservationCode, name, citizenship, selectedFlight);
 			FlightManager.ReduceSeat(selectedFlight.FlightCode, allFlights);
 			FlightManager.WriteFlight(allFlights);
+			Clear();
 			message = "Flight reserved";			
 		}
 		catch(Exception e)
