--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -137,7 +137,7 @@
 			Clear();
 			flights=FlightManager.FindFlights(from, to, filterDay);
 			filter++;
-
+			message = "";
 		}
 		catch(Exception e)
 		{
