--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -127,7 +127,7 @@
 	string to="Any";
 	string filterDay = "Any";
 	int filter = 0;
-	List<Flight> flights;
+	List<Flight> flights = new List<Flight>();
 
 	//Calling the findFlight() method in flightmanager
 	private void Filter()
@@ -135,6 +135,7 @@
 		try
 		{
 			Clear();
+			flights.Clear();
 			flights=FlightManager.FindFlights(from, to, filterDay);
 			filter++;
 			message = "";
