--- a/GroupAssignment2/Components/Pages/Flights.razor
+++ b/GroupAssignment2/Components/Pages/Flights.razor
@@ -1,7 +1,8 @@
 ﻿@page "/flights"
 
 @*Flight Finder dropdown*@
-<h4 class="text-center my-2">Flight Finder</h4>
+<div class="container-fluid">
+<h4 class="my-2">Flight Finder</h4>
 <div class="d-flex flex-nowrap justify-content-between gap-4">
 	<div class="w-25">
 		<label>From: </label>
@@ -43,7 +44,7 @@
 </div>
 
 
-<h4 class="text-center mt-5 mb-2">Flights</h4>
+	<h4 class="mt-5 mb-2">Flights</h4>
 <div>
 	@if (filter == 0)
 	{
@@ -67,7 +68,7 @@
 	}
 </div>
 
-<h4 class="text-center mt-5 mb-0">Reserve</h4>
+	<h4 class="mt-5 mb-0">Reserve</h4>
 <div>
 	<div class="form-group">
 		<label>Flight code: </label>
@@ -104,10 +105,13 @@
 		<input type="text" class="form-control" placeholder="Citizenship" @bind="citizenship" />
 	</div>
 </div>
-<div class="d-flex flex-column justify-content-between align-items-center">
-	<button type="submit" class="btn btn-primary my-3" @onclick="Reserve"  style="width: 200px;">Reserve</button>
-	<label class="mb-2 fs-6" >Reservation Code: @reservationCode </label>
-	<span style="color: orangered" >@message</span>
+<div class="final-container">
+	<div class="d-flex flex-column justify-content-between">
+	<button type="submit" class="btn btn-primary my-3 text-start" @onclick="Reserve" style="width: 200px;">Reserve</button>
+		<label class="resLabel text-start" style="font-size: 0.8em">Reservation Code: @reservationCode </label>
+		<span class="text-start" style="color: orangered">@message</span>
+	</div>
+</div>
 </div>
 
 
