--- a/GroupAssignment2/Components/Pages/Reservations.razor
+++ b/GroupAssignment2/Components/Pages/Reservations.razor
@@ -1,17 +1,18 @@
 ﻿@page "/reservation"
 @using GroupAssignment2.Data
 
-<h3>Reservation Finder</h3>
+<div class="container-fluid">
+    <h4 class="my-2">Reservation Finder</h4>
 
-<div class="search-container">
-    <div class="search-item">
+<div class="d-flex flex-nowrap justify-content-between gap-4">
+    <div class="w-25">
         <label>Code:</label>
-        <input type="text" placeholder="Any" @bind="reservationCode" />
+        <input class="form-control" type="text" placeholder="Any" @bind="reservationCode" />
     </div>
 
-    <div class="search-item">
+    <div class="w-25">
         <label>Airline:</label>
-        <select @bind="airline">
+        <select class="form-select" @bind="airline">
             <option value="" disabled selected>Select...</option>
             @foreach (string airline in FlightManager.GetAirlines())
             {
@@ -20,24 +21,27 @@
         </select>
     </div>
 
-    <div class="search-item">
+    <div class="w-25">
         <label>Name:</label>
-        <input type="text" placeholder="Any" @bind="name" />
+        <input class="form-control" type="text" placeholder="Any" @bind="name" />
     </div>
 
-
-    <button class="find-button" @onclick="SearchReservation">Find reservations</button>
+    <div class="w-25">
+        <label></label>
+        <button class="btn btn-primary w-100" @onclick="SearchReservation">Find reservations</button>
+    </div>
+    
 </div>
 
 <div class="flights-found-field">
-    <h3>Reservations</h3>
+        <h4 class="mt-5 mb-2">Reservations</h4>
     @if (reservationsFound.Count == 0)
     {
-        <span class="formatted-field">Loading...</span>
+        <span class="formatted-field form-control">Loading...</span>
     }
     else
     {
-        <select class="formatted-field" @bind="selectedReservationStr">
+        <select class="formatted-field form-control" @bind="selectedReservationStr">
             <option value="" selected disabled>Please select reservations...</option>
             @foreach (Reservation reservation in reservationsFound)
             {
@@ -52,36 +56,48 @@
 </div>
 
 
-<h3>Reserve</h3>
+    <h4 class="mt-5 mb-0">Reserve</h4>
 <div class="reservation-container">
-    <label>Reservation code:</label>
-    <span class="formatted-field">@reservationCodeDisplay</span>
+    <div class="form-group">
+        <label>Reservation code:</label>
+        <span class="form-control">@reservationCodeDisplay</span>
+    </div>
 
-    <label>Flight code:</label>
-    <span class="formatted-field">@flightCode</span>
+    <div class="form-group">
+        <label>Flight code:</label>
+        <span class="form-control">@flightCode</span>
+    </div>
 
-    <label>Airline:</label>
-    <span class="formatted-field">@airlineDisplay</span>
-
-    <label>Cost:</label>
-    <span class="formatted-field">@cost</span>
-
-    <label>Name:</label>
-    <input type="text" class="formatted-field" placeholder="Name" @bind="nameDisplay">
-
-    <label>Citizenship:</label>
-    <input type="text" class="formatted-field" placeholder="Citizenship" @bind="citizenship">
-
-    <label>Status:</label>
-    <select class="formatted-field" @bind="status">
-        <option value="Active" selected>Active</option>
-        <option value="Inactive">Inactive</option>
-    </select>
+    <div class="form-group">
+        <label>Airline:</label>
+        <span class="form-control">@airlineDisplay</span>
+    </div>
+    <div class="form-group">
+        <label>Cost:</label>
+        <span class="form-control">@cost</span>
+    </div>
+    <div class="form-group">
+        <label>Name:</label>
+        <input type="text" class="form-control" placeholder="Name" @bind="nameDisplay">
+    </div>
+    <div class="form-group">
+        <label>Citizenship:</label>
+        <input type="text" class="form-control" placeholder="Citizenship" @bind="citizenship">
+    </div>
+    <div class="form-group">
+        <label>Status:</label>
+        <select class="form-control" @bind="status">
+            <option value="Active" selected>Active</option>
+            <option value="Inactive">Inactive</option>
+        </select>
+    </div>
 </div>
-
-<div class="reserve-button-container">
-    <button class="reserve-button" @onclick="UpdateReservation">Save</button>
-    <span class="error">@message</span>
+<div class="final-container">
+<div class="d-flex flex-column justify-content-center">
+    <button class="btn btn-primary my-3 text-start" style="width: 200px" @onclick="UpdateReservation">Save</button>
+    <span class="error text-start">@message</span>
+</div>
+    </div>
 </div>
 
 @code {
