--- a/GroupAssignment2/Components/Pages/Reservations.razor
+++ b/GroupAssignment2/Components/Pages/Reservations.razor
@@ -103,7 +103,7 @@
 @code {
     private string selectedReservationStr; //when select flight from flightFound List
     private string flightCode = "Flight Code";
-    private string airline = "";
+    private string airline;
     private string airlineDisplay = "Airline";
     private string cost = "Cost";
     public string name = "Any";
