--- a/GroupAssignment2/Components/Pages/Reservations.razor
+++ b/GroupAssignment2/Components/Pages/Reservations.razor
@@ -13,7 +13,7 @@
         <div class="w-25">
             <label>Airline:</label>
             <select class="form-select" @bind="airline">
-                <option value="Any">Any</option>
+                <option value="Any" selected>Any</option>
                 @foreach (string airline in FlightManager.GetAirlines())
                 {
                     <option value=@airline>@airline</option>
@@ -103,7 +103,7 @@
 @code {
     private string selectedReservationStr; //when select flight from flightFound List
     private string flightCode = "Flight Code";
-    private string airline;
+    private string airline="Any";
     private string airlineDisplay = "Airline";
     private string cost = "Cost";
     public string name = "Any";
